--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Last Updated: 4 Oct 2023
 
     </p>
-    <h2>You can see my github <a href="https://github.com/MrCreativeOP"></a>Here</h2>
+    <h2>You can see my github <a target="_blank" href="https://github.com/MrCreativeOP">Here</a></h2>
     <h2>My Blogger Website</h2>
     <p><a target="_blank" href="https://www.antrikshxd.blogspot.com">
         Open My Main Website!</a></p>
