--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the main page of AntrikshxD's github pages website">
+    <!--Google verification for indexing-->
+    <meta name="google-site-verification" content="3TrQQ8hzi1PwCraw4nZib-rs1VbgqTYNTWyyYuW9SDc" />
     <title>AntrikshxD aka MrCreativeOP</title>
 </head>
 <body style="background-color: aquamarine;">
